# KTH-ID2222

./: README.md
assignment1/ID2222_DataMining-Assignment1/ID2222_DataMining-Assignment1/: README.md  hw1.ipynb  pyproject.toml
assignment1/ID2222_DataMining-Assignment1/ID2222_DataMining-Assignment1/noveldataset/: xhtml_chapter002.txt  xhtml_chapter002_modified.txt  xhtml_chapter003.txt  xhtml_chapter004.txt  xhtml_chapter005.txt  xhtml_chapter006.txt  xhtml_chapter006_modiefied.txt  xhtml_chapter007.txt  xhtml_chapter008.txt  xhtml_chapter008_modified.txt
assignment2/ID2222_DataMining-Assignment2/ID2222_DataMining-Assignment2/: hw2.ipynb
assignment3/ID2222_DataMining-Assignment3/ID2222_DataMining-Assignment3/: README.md  hw3.ipynb
assignment4/: HW4.docx  hw4-improved.docx
assignment4/assignment4/: create_eigengap_viz.py  detailed_analysis.py  spectral_clustering.py
assignment5/submit (1)/submit/: JabejaBonus.java  JabejaTask12.java
