[project]
name = "id2222-datamining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyspark>=4.0.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
